Changes for 1.5:

 - [DEV-103] added support of disabling login rights for a users group (Artem)
 - [DEV-102] added support of UTF8 for GUI (Artem)
 - [DEV-97] added screen for easier creation of locales (Artem)
 - [DEV-96] added availability to disable default user "guest" (Artem)
 - [DEV-95] added group status enabled/disabled (Artem)
 - [DEV-94] added processing of the "database down" event (Artem)
 - [DEV-93] added availability to select all hosts in specified group in "Monitoring" section (Artem)
 - [DEV-91] added printable view for pages (Artem)
 - [DEV-89] improved trigger tables view (Artem)
 - [DEV-88] removed duplicated entry "Login" (Artem)
 - [DEV-87] fixed problem with unlinking templates (Sasha)
 - [DEV-52] added "Unlimited number of link styles for maps" (Artem)
 - [DEV-86] DM: Synchronizing all history data with master node (Sasha)
 - bulk acknowledge with empty comment (Sasha)
 - performance improvement of processing events in frontend (Artem)
 - [DEV-66] added sorting to screens (Artem)
 - The last character for last value is unreadable (Sasha)
 - [DEV-60] added availability of setting hosts view style in overview (Artem)
 - [DEV-53] added different style for dependent triggers in "Status of triggers" (Artem)
 - [DEV-62] added availability to select all hosts in "Availability report" (Artem)
 - [DEV-75] Empty command result window (Sasha)
 - [DEV-74] Scripts of all nodes are displayed (Sasha)
 - [DEV-54] added zoom for graphs (Artem)
 - [DEV-48] Support of Ping and Traceroute in Status of Triggers screen (Sasha)
 - [DEV-57] added better "hosts info" selection in screens (Artem)
 - [DEV-56] added better item selection in screens (Artem)
 - [DEV-48] added scripts form,scripts list, script call menu (Artem)
 - [DEV-44] more flexible generation of trigger events (Alexei)
 - [DEV-45] added new design of Status of Triggers (Artem)
 - [DEV-47] added support of selection of events and bulk acknowledge of events (Artem)